<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:layoutDirection="ltr"
    android:orientation="vertical"
    tools:ignore="MissingPrefix">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/dim_20"
        android:background="@drawable/popup_background"
        android:elevation="@dimen/dim_2"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/popup_top_white"
            android:padding="@dimen/dim_10">

            <ImageView
                android:layout_width="@dimen/dim_32"
                android:layout_height="@dimen/dim_32"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/dim_10" />

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:fontFamily="@font/noto_extra_bold"
                android:gravity="center"
                android:includeFontPadding="false"
                android:minHeight="@dimen/dim_40"
                android:text="@string/give_us_a_rating"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="@dimen/textSize_18" />

            <ImageView
                android:id="@+id/ivClose"
                android:layout_width="@dimen/dim_32"
                android:layout_height="@dimen/dim_32"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="@dimen/dim_10"
                android:src="@drawable/ic_close"
                android:visibility="invisible"
                app:tint="@color/grey_font" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dim_0_5"
            android:background="@color/border_grey" />

        <RelativeLayout
            android:id="@+id/layoutRateUs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/popup_footer_white"
            android:orientation="vertical">

            <TextView
                android:id="@+id/lblRate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dim_15"
                android:fontFamily="@font/noto_regular"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/rate_us_please_message"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="@dimen/textSize_16" />

            <ImageView
                android:id="@+id/ivArrow"
                android:layout_width="@dimen/dim_25"
                android:layout_height="@dimen/dim_25"
                android:layout_below="@id/lblRate"
                android:layout_alignEnd="@id/ratingBar"
                android:layout_gravity="right"
                android:layout_marginRight="@dimen/dim_12"
                android:src="@drawable/ic_down_hand" />

            <com.willy.ratingbar.RotationRatingBar
                android:id="@+id/ratingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/ivArrow"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                app:srb_starHeight="@dimen/dim_32"
                app:srb_starWidth="@dimen/dim_32"
                app:srb_stepSize="1" />

            <View
                android:id="@+id/viewSeparator"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dim_0_5"
                android:layout_below="@id/ratingBar"
                android:layout_marginTop="@dimen/dim_15"
                android:background="@color/border_grey" />


            <android.widget.Button
                android:id="@+id/tvRateUs"
                android:layout_width="@dimen/dim_150"
                android:layout_height="@dimen/dim_40"
                android:layout_below="@id/viewSeparator"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/dim_15"
                android:background="@drawable/selector_btn"
                android:fontFamily="@font/noto_extra_bold"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/rate_us"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/textSize_15" />

            <TextView
                android:id="@+id/tvMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/viewSeparator"
                android:layout_margin="@dimen/dim_15"
                android:fontFamily="@font/noto_regular"
                android:gravity="center"
                android:hint="@string/enter_your_feedback"
                android:includeFontPadding="false"
                android:minHeight="@dimen/dim_40"
                android:text="@string/oh_we_need_to_do_better"
                android:textColor="@color/black_font"
                android:textColorHint="@android:color/darker_gray"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/textSize_16"
                android:visibility="invisible"
                tools:ignore="MissingPrefix" />

        </RelativeLayout>
    </LinearLayout>
</LinearLayout>