<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:layoutDirection="ltr"
    android:orientation="vertical"
    tools:ignore="MissingPrefix">

    <LinearLayout
        android:id="@+id/layoutContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/dim_20"
        android:background="@drawable/popup_background"
        android:elevation="@dimen/dim_2"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/popup_top_white"
            android:fontFamily="@font/noto_extra_bold"
            android:gravity="center"
            android:includeFontPadding="false"
            android:minHeight="@dimen/dim_50"
            android:padding="@dimen/dim_10"
            android:text="Update Available"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/textSize_18" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/popup_footer_white"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dim_0_5"
                android:background="@color/border_grey" />


            <TextView
                android:id="@+id/tvMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dim_15"
                android:fontFamily="@font/noto_regular"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/rate_us_please_message"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="@dimen/textSize_16" />

            <LinearLayout
                android:id="@+id/layoutUsageAccessPermission"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dim_15"
                android:layout_marginRight="@dimen/dim_15"
                android:layout_marginBottom="@dimen/dim_15"
                android:background="@color/tools_bg_grey"
                android:orientation="horizontal"
                android:visibility="gone">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/dim_5"
                    android:layout_marginRight="@dimen/dim_15"
                    android:layout_weight="1"
                    android:fontFamily="@font/noto_medium"
                    android:includeFontPadding="false"
                    android:paddingLeft="@dimen/dim_15"
                    android:text="Permit usage access"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="@dimen/textSize_16" />

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/ivLottie"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dim_30"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="@dimen/dim_5"
                    android:layout_marginRight="@dimen/dim_15"
                    android:layout_marginBottom="@dimen/dim_5"
                    android:adjustViewBounds="true"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"
                    app:lottie_rawRes="@raw/bg_toggle_button" />
            </LinearLayout>

            <View
                android:id="@+id/viewSeparator"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dim_0_5"
                android:background="@color/border_grey" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layoutEdittext"
                android:layout_marginTop="@dimen/dim_15"
                android:orientation="horizontal">

                <android.widget.Button
                    android:id="@+id/btnCancel"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dim_40"
                    android:layout_marginLeft="@dimen/dim_15"
                    android:layout_marginBottom="@dimen/dim_15"
                    android:layout_weight="1"
                    android:background="@null"
                    android:fontFamily="@font/noto_medium"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:text="@string/cancel"
                    android:textAllCaps="false"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/textSize_15" />

                <android.widget.Button
                    android:id="@+id/btnUpdate"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dim_40"
                    android:layout_marginLeft="@dimen/dim_15"
                    android:layout_marginRight="@dimen/dim_15"
                    android:layout_marginBottom="@dimen/dim_15"
                    android:layout_weight="1"
                    android:background="@drawable/selector_btn"
                    android:fontFamily="@font/noto_medium"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:text="@string/update"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textSize_15" />


            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>